--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <div class="row">
                 <div class="col-md-6">
                     <h1 class="fw-bold text-white fuente-titulo">
-                        Explora, descubre y colecciona a tu propia manera
+                        Descubre y explora como a ti te cante la gana
                     </h1>
                     <p class="mt-4 fw-bold text-light text-opacity-50">
                         Tenemos miles de colecciones de tus artistas favoritos para explorar, ven y adéntrate en nuestro
